exports[`HitsPerPage applies translations 1`] = `
<ul
  className="root">
  <li
    className="item itemSelected undefined undefined">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      111
    </a>
  </li>
  <li
    className="item false undefined undefined">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      333
    </a>
  </li>
  <li
    className="item false undefined undefined">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      666
    </a>
  </li>
</ul>
`;

exports[`HitsPerPage supports passing number items 1`] = `
<ul
  className="root">
  <li
    className="item itemSelected undefined undefined">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      111
    </a>
  </li>
  <li
    className="item false undefined undefined">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      333
    </a>
  </li>
  <li
    className="item false undefined undefined">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      666
    </a>
  </li>
</ul>
`;

exports[`HitsPerPage supports passing object items 1`] = `
<ul
  className="root">
  <li
    className="item itemSelected undefined undefined">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      111 items
    </a>
  </li>
  <li
    className="item false undefined undefined">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      333 items
    </a>
  </li>
  <li
    className="item false undefined undefined">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      666 items
    </a>
  </li>
</ul>
`;
